Fix an overflow in a textarea.

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -166,3 +166,7 @@ table.gamelist {
 		font-size: 2em;
 	}
 }
+
+textarea{
+  max-width: 390px;
+}
